[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pkg-logger"
version = "0.1.0"
description = "Small package-local logger with tqdm-friendly output"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Josua" }]
dependencies = [
  "tqdm>=4.60",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["pkg_logger*"]
